--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!--page title, meta data and link to the css-->
+    <!--page title, metadata and link to the css-->
 	<title>Samantha Soosaar- software developer and future employee</title>
 	<meta name="description" content="This is the e-portfolio of Samantha Soosaar used for her candidancy for jobs">
 	<meta name="keywords" content="HTML, HTML5, e-portfolio, Samantha Soosaar, programming, software development, javascript">
@@ -18,21 +18,25 @@
 		    <nav id="navbar">
 		        <div class="container">
 		            <h1>
-		                <a href=".prof_intro">Samantha</a>
+		                <a href="#prof_intro">Samantha</a>
 		            </h1>
 		            <ul>
 		                <li>
-		                    <a class="current" href=".prof_intro">Professional introduction</a>
+		                    <a class="current" href="#prof_intro">Professional introduction</a>
 		                </li>
 		                <li>
-		                    <a href=".qual">Qualifications</a>
+		                    <a href="#qual">Qualifications</a>
 		                </li>
+                        <li>
+                          <a href="#past_prj">Past Projects</a>
+                        </li>
 		                <li>
-		                    <a href=".abt_me">Who I am as a person!</a>
+		                    <a href="#abt_me">Who I am as a person!</a>
 		                </li>
 		            </ul>
 		        </div>
 		    </nav>
+  </header>
     <div id="prof_intro">
       <img id='pic_me' src='#' alt='Samantha Soosaar'>
       <div id='web_dev_text'>
@@ -57,25 +61,28 @@
     </div>
     <div id='past_exp'>
       <div id='education'>
-        <h3>Tartu Vocational College</h3>
+        <h3><a href="https://voco.ee/">Tartu Vocational College</a></h3>
         <p>Vocational Education</p> 
         <p>Junior software developer</p>
         <p>2023-ongoing</p>
-        <h3>Tallinn's Mustamäe Gymnasium</h3>
+        <br>
+        <h3><a href="https://mg.edu.ee/">Tallinn's Mustam&#228;e Gymnasium</a></h3>
         <p>Gymnasium Education </p>
         <p>Language and Sciences</p>
         <p>2018-2021</p>
       </div>
       <div id='work_exp'>
-        <h3>Tallinn's Central Library</h3>
+        <h3><a href="https://keskraamatukogu.ee/">Tallinn's Central Library</a></h3>
         <p>Volunteer work at a Library</p>
         <p>Stocking shelves and searching for misplaced books</p>
         <p>2023-present</p>
-        <h3>SA Estonias-Hollands Charity Fund</h3>
+        <br>
+        <h3><a href="https://www.toidupank.ee/">SA Estonias-Hollands Charity Fund</a></h3>
         <p>Volunteer work at Tallinn's Food Bank</p>
         <p>Packaging, customer service and cleaning</p>
         <p>2023</p>
-        <h3>GoWorkABit Lietuva</h3>
+        <br>
+        <h3><a href="https://goworkabit.com/">GoWorkABit Lietuva</a></h3>
         <p>Freelance employment</p>
         <p>Doing a variety of jobs and tasks for a variety of employers</p>
         <p>Including: </p>
@@ -128,24 +135,25 @@
       <h4>Mimo</h4>
       <ul>
         <li>
-          <a>HTML basics:</a>
+          <a href="https://mimo.org/web/194/section/0?trackId=194&sectionId=0&showDrawer=path-overview">HTML basics:</a>
         </li>
         <li>
-          <a>HTML intermediate:</a>
+          <a href="https://mimo.org/web/194/section/1?trackId=194&sectionId=0&showDrawer=path-overview">HTML intermediate:</a>
         </li>
         <li>
-          <a>Semantic HTML:</a>
+          <a href="https://mimo.org/web/194/section/2?trackId=194&sectionId=1&showDrawer=path-overview">Semantic HTML:</a>
         </li>
         <li>
-          <a>CSS basics:</a>
-        </li>
-        <li>
-          <a>JavaScript basics:</a>
+          <a href="https://mimo.org/web/197/section/0?trackId=197&sectionId=1&showDrawer=path-overview">JavaScript basics:</a>
         </li>
       </ul>
+    </div>
+    <div id='qual'>
       <h3>Skills I've obtained</h3>
     </div>
-    <div id='me'>
+    <div id="past_prj">
+    </div>
+    <div id='abt_me'>
       <div id='hobbies'>
         
       </div>
@@ -154,5 +162,5 @@
         <p>Lorem ipsum</p>
       </div>
     </div>
-    <btn id='to_top'>Back to the top</btn>
+    <button id='to_top'>Back to the top</button>
 </body>
