Updated, created a style

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
   <header>
 		    <nav id="navbar">
 		        <div class="container">
-		            <h1>
-		                <a href="#prof_intro">Samantha</a>
-		            </h1>
+                  <a href="#prof_intro"><img id='logo' src="img/logo_sam_small.png" alt="logo"></a>
 		            <ul>
 		                <li>
 		                    <a class="current" href="#prof_intro">Professional introduction</a>
@@ -38,7 +36,7 @@
 		    </nav>
   </header>
     <div id="prof_intro">
-      <img id='pic_me' src='#' alt='Samantha Soosaar'>
+      <img id='pic_me' src='img/Pic_of_me.jpg' alt='Samantha Soosaar'>
       <div id='web_dev_text'>
         <h2>What defines me as a web developer?</h2>
         <p> Hello!</p>
