--- a/index.html
+++ b/index.html
@@ -96,9 +96,12 @@
         <p>Lorem Ipsum</p>
       </div>
     </div>
-    <div id='train'>
-      <h3>Training I have</h3>
-      <ul></ul>
+    <div id='self-education'>
+      <div id="training">
+        <h3>Training I have</h3>
+        <ul></ul>
+      </div>
+      <div id="e-courses">
       <h3>E-courses I've passed</h3>
       <h4>Codecademy</h4>
       <ul>
@@ -146,10 +149,12 @@
         </li>
       </ul>
     </div>
-    <div id='qual'>
-      <h3>Skills I've obtained</h3>
+      <div id='qual'>
+        <h3>Skills I've obtained</h3>
+      </div>
     </div>
     <div id="past_prj">
+      <h2>Some of my past work</h2>
     </div>
     <div id='abt_me'>
       <div id='hobbies'>
