--- a/index.html
+++ b/index.html
@@ -155,10 +155,21 @@
     </div>
     <div id="past_prj">
       <h2>Some of my past work</h2>
+	    <div id='prj.1'>
+		    <h3>project 1</h3>
+	    </div>
+	    <div id='prj.2'>
+		    <h3>project 2</h3>
+	    </div>
+	    <div id='prj.3'>
+		    <h3>project 3</h3>
+	    </div>
     </div>
     <div id='abt_me'>
       <div id='hobbies'>
-        
+        <h3>learning</h3>
+	<h3>video games</h3>
+	<h3>tv shows</h3>
       </div>
       <div id='self_intro'>
         <h2>Who am I as a person?</h2>
