added more text

--- a/index.html
+++ b/index.html
@@ -92,16 +92,13 @@
         </ul>
       </div>
       <div id='guests'>
-        <h3>Lorem Ipsum</h3>
-        <p>Lorem Ipsum</p>
+        <h3>Events and Speakers</h3>
+        <p>Kutsevoistlus</p>
+        <p>UT esitlused</p>
+        <p>Robootika</p>
       </div>
     </div>
-    <div id='self-education'>
-      <div id="training">
-        <h3>Training I have</h3>
-        <ul></ul>
-      </div>
-      <div id="e-courses">
+    <div id="e-courses">
       <h3>E-courses I've passed</h3>
       <h4>Codecademy</h4>
       <ul>
@@ -151,30 +148,54 @@
     </div>
       <div id='qual'>
         <h3>Skills I've obtained</h3>
+        <div>
+          <h4><span class="red">H</span>yper<span class="red">T</span>ext <span class="red">M</span>arkup <span class="red">L</span>anguage</h4>
+        </div>
+        <div>
+          <h4><span class="red">J</span>ava<span class="red">S</span>cript</h4>
+        </div>
+        <div>
+          <h4><span class="red">C</span>ascading <span class="red">S</span>tyle <span class="red">S</span>heets</h4>
+        </div>
       </div>
     </div>
     <div id="past_prj">
       <h2>Some of my past work</h2>
 	    <div id='prj.1'>
 		    <h3>project 1</h3>
+        <img src="">
 	    </div>
 	    <div id='prj.2'>
 		    <h3>project 2</h3>
+        <img src="">
 	    </div>
 	    <div id='prj.3'>
 		    <h3>project 3</h3>
+        <img src="">
 	    </div>
     </div>
     <div id='abt_me'>
       <div id='hobbies'>
         <h3>learning</h3>
-	<h3>video games</h3>
-	<h3>tv shows</h3>
+	      <h3>video games</h3>
+	      <h3>tv shows</h3>
       </div>
       <div id='self_intro'>
         <h2>Who am I as a person?</h2>
-        <p>Lorem ipsum</p>
+        <p>I try to be kind and understanding and I think I do a decent job at it.
+          I'm intrigued by what intrigues others.
+          Not as much about the thing itself, but their interest in it.
+          As all humans I'm explained by paradoxes:
+          <li>
+            <ul>I love people, but they exhaust me.</ul>
+            <ul>I'm smart, but I'm also dumb.</ul>
+            <ul>I'm empathic and it makes me lack empathy.</ul>
+          </li>
+
+        </p>
       </div>
     </div>
-    <button id='to_top'>Back to the top</button>
+    <button onclick="topFunction()" id='to_top'>Back to the top</button>
+    <script src="script.js"></script>
 </body>
+</html>
