--- a/index.html
+++ b/index.html
@@ -148,14 +148,25 @@
     </div>
       <div id='qual'>
         <h3>Skills I've obtained</h3>
-        <div>
+        <div id="skill_1" class="skills">
           <h4><span class="red">H</span>yper<span class="red">T</span>ext <span class="red">M</span>arkup <span class="red">L</span>anguage</h4>
+          <img src="">
         </div>
-        <div>
+        <div id="skill_2" class="skills">
           <h4><span class="red">J</span>ava<span class="red">S</span>cript</h4>
+          <img src="">
         </div>
-        <div>
+        <div id="skill_3" class="skills"> 
           <h4><span class="red">C</span>ascading <span class="red">S</span>tyle <span class="red">S</span>heets</h4>
+          <img src="">
+        </div>
+        <div id="skill_4" class="skills">
+          <h4><span class="red">Maria D</span>ata<span class="red">B</span>ase</h4>
+          <img src="">
+        </div>
+        <div id="skill_5" class="skills">
+          <h4>My<span class="red">S</span>tructured<span class="red">Q</span>uery<span class="red">L</span>anguage</h4>
+          <img src="">
         </div>
       </div>
     </div>
@@ -191,7 +202,6 @@
             <ul>I'm smart, but I'm also dumb.</ul>
             <ul>I'm empathic and it makes me lack empathy.</ul>
           </li>
-
         </p>
       </div>
     </div>
