--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <h2>What defines me as a web developer?</h2>
         <p> Hello!</p>
         <br>
-        <p>My legal name is Carlos Soosaar, but I go by Samantha Soosaar. I’m 21 years old and a July baby.
-          I’m currently undergoing a Junior Software Developer vocational degree in Tartu Vocational College.
+        <p>My legal name is Carlos Soosaar, but I go by <span class="emp">Samantha Soosaar</span>. I’m <span class="emp">21</span> years old and a July baby.
+          I’m currently undergoing a <span class="emp">Junior Software Developer</span> vocational degree in Tartu Vocational College.
           I’ve chosen software development as I’ve always been of a technical mind
           and after a half a year of introspection I’ve realised a career in IT seems like it would be a great fit for me.
           Tartu Vocational College also gives me a lot of structure which is important for me.
@@ -50,10 +50,9 @@
         <br>
         <p>By now I’ve acquired a bit of experience in building software through HTML,
           CSS and JavaScript and how to link them.
-          I've also learned how to create and manipulate mariaDB databases.
+          I've also learned how to create and manipulate mariaDB databases and make use of MySQL.
           On my free time I've acquired a surface level of command line experience.
-          I have also learnt how to use 
-          I’m in no means an expert and I wouldn’t even say I’m adept, but I’m surely a novice at least.
+          I'm also quite a nimble study, especially if guided.
         </p>
       </div>
     </div>
@@ -149,23 +148,23 @@
       <div id='qual'>
         <h3>Skills I've obtained</h3>
         <div id="skill_1" class="skills">
-          <h4><span class="red">H</span>yper<span class="red">T</span>ext <span class="red">M</span>arkup <span class="red">L</span>anguage</h4>
+          <h4><span class="emp">H</span>yper<span class="emp">T</span>ext <span class="emp">M</span>arkup <span class="emp">L</span>anguage</h4>
           <img src="">
         </div>
         <div id="skill_2" class="skills">
-          <h4><span class="red">J</span>ava<span class="red">S</span>cript</h4>
+          <h4><span class="emp">J</span>ava<span class="emp">S</span>cript</h4>
           <img src="">
         </div>
         <div id="skill_3" class="skills"> 
-          <h4><span class="red">C</span>ascading <span class="red">S</span>tyle <span class="red">S</span>heets</h4>
+          <h4><span class="emp">C</span>ascading <span class="emp">S</span>tyle <span class="emp">S</span>heets</h4>
           <img src="">
         </div>
         <div id="skill_4" class="skills">
-          <h4><span class="red">Maria D</span>ata<span class="red">B</span>ase</h4>
+          <h4><span class="emp">Maria D</span>ata<span class="emp">B</span>ase</h4>
           <img src="">
         </div>
         <div id="skill_5" class="skills">
-          <h4>My<span class="red">S</span>tructured<span class="red">Q</span>uery<span class="red">L</span>anguage</h4>
+          <h4>My<span class="emp">S</span>tructured<span class="emp">Q</span>uery<span class="emp">L</span>anguage</h4>
           <img src="">
         </div>
       </div>
