--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!--page title, metadata and link to the css-->
 	<title>Samantha Soosaar- software developer and future employee</title>
 	<meta name="description" content="This is the e-portfolio of Samantha Soosaar used for her candidancy for jobs">
-	<meta name="keywords" content="HTML, HTML5, e-portfolio, Samantha Soosaar, programming, software development, javascript">
+	<meta name="keywords" content="e-portfolio, Samantha Soosaar, programming, software development, javascript, junior software developer">
 	<meta name="author" content="Samantha Soosaar">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,7 @@
                   <a href="#prof_intro"><img id='logo' src="img/logo_sam_small.png" alt="logo"></a>
 		            <ul>
 		                <li>
-		                    <a class="current" href="#prof_intro">Professional introduction</a>
+		                    <a href="#prof_intro">Professional introduction</a>
 		                </li>
 		                <li>
 		                    <a href="#qual">Qualifications</a>
