--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@
           I'm intrigued by what intrigues others.
           Not as much about the thing itself, but their interest in it.
           As all humans I'm explained by paradoxes:
-          <li>
-            <ul>I love people, but they exhaust me.</ul>
-            <ul>I'm smart, but I'm also dumb.</ul>
-            <ul>I'm empathic and it makes me lack empathy.</ul>
-          </li>
+          <ul>
+            <li>I love people, but they exhaust me.</li>
+            <li>I'm smart, but I'm also dumb.</li>
+            <li>I'm empathic and it makes me lack empathy.</li>
+          </ul>
         </p>
       </div>
     </div>
