comments about what to do going forward

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--I think we could do with adding some cool effects-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -90,6 +91,7 @@
           <li>Assembling products</li>
         </ul>
       </div>
+      <!--add actual event names-->
       <div id='guests'>
         <h2>Events and Speakers</h2>
         <p>Kutsevoistlus</p>
@@ -169,6 +171,7 @@
         </div>
       </div>
     </div>
+    <!--choose and add past projects-->
     <div id="past_prj">
       <h2>Some of my past work</h2>
 	    <div id='prj.1'>
@@ -190,6 +193,7 @@
 	      <h3>video games</h3>
 	      <h3>tv shows</h3>
       </div>
+      <!--maybe more info-->
       <div id='self_intro'>
         <h2>Who am I as a person?</h2>
         <p>I try to be kind and understanding and I think I do a decent job at it.
