--- a/index.html
+++ b/index.html
@@ -57,30 +57,32 @@
         </p>
       </div>
     </div>
-    <div id='past_exp'>
+    <div class='grid-container'>
       <div id='education'>
-        <h2><a href="https://voco.ee/">Tartu Vocational College</a></h2>
+        <h2>Where I've studied</h2>
+        <h3><a href="https://voco.ee/">Tartu Vocational College</a></h3>
         <p>Vocational Education</p> 
         <p>Junior software developer</p>
         <p>2023-ongoing</p>
         <br>
-        <h2><a href="https://mg.edu.ee/">Tallinn's Mustam&#228;e Gymnasium</a></h2>
+        <h3><a href="https://mg.edu.ee/">Tallinn's Mustam&#228;e Gymnasium</a></h3>
         <p>Gymnasium Education </p>
         <p>Language and Sciences</p>
         <p>2018-2021</p>
       </div>
       <div id='work_exp'>
-        <h2><a href="https://keskraamatukogu.ee/">Tallinn's Central Library</a></h2>
+        <h2>Where I've worked</h2>
+        <h3><a href="https://keskraamatukogu.ee/">Tallinn's Central Library</a></h3>
         <p>Volunteer work at a Library</p>
         <p>Stocking shelves and searching for misplaced books</p>
         <p>2023-present</p>
         <br>
-        <h2><a href="https://www.toidupank.ee/">SA Estonias-Hollands Charity Fund</a></h2>
+        <h3><a href="https://www.toidupank.ee/">SA Estonias-Hollands Charity Fund</a></h3>
         <p>Volunteer work at Tallinn's Food Bank</p>
         <p>Packaging, customer service and cleaning</p>
         <p>2023</p>
         <br>
-        <h2><a href="https://goworkabit.com/">GoWorkABit Lietuva</a></h2>
+        <h3><a href="https://goworkabit.com/">GoWorkABit Lietuva</a></h3>
         <p>Freelance employment</p>
         <p>Doing a variety of jobs and tasks for a variety of employers</p>
         <p>Including: </p>
@@ -99,6 +101,7 @@
         <p>Robootika</p>
       </div>
     </div>
+    <div class="grid-container">
     <div id="e-courses">
       <h2>E-courses I've passed</h2>
       <h3>Codecademy</h3>
@@ -166,7 +169,7 @@
           <img src="">
         </div>
         <div id="skill_5" class="skills">
-          <h3>My<span class="emp">S</span>tructured<span class="emp">Q</span>uery<span class="emp">L</span>anguage</h3>
+          <h3><span class="emp">MyS</span>tructured<span class="emp">Q</span>uery<span class="emp">L</span>anguage</h3>
           <img src="">
         </div>
       </div>
@@ -187,11 +190,12 @@
         <img src="">
 	    </div>
     </div>
-    <div id='abt_me'>
+  <div class="grid-container">
       <div id='hobbies'>
+        <h2>My Hobbies</h2>
         <h3>learning</h3>
-	      <h3>video games</h3>
-	      <h3>tv shows</h3>
+        <h3>video games</h3>
+        <h3>tv shows</h3>
       </div>
       <!--maybe more info-->
       <div id='self_intro'>
@@ -207,7 +211,7 @@
           </ul>
         </p>
       </div>
-    </div>
+  </div>
     <button onclick="topFunction()" id='to_top'>Back to the top</button>
     <script src="script.js"></script>
 </body>
