--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                           <a href="#past_prj">Past Projects</a>
                         </li>
 		                <li>
-		                    <a href="#abt_me">Who I am as a person!</a>
+		                    <a href="#hobbies">Who I am as a person!</a>
 		                </li>
 		            </ul>
 		        </div>
@@ -204,12 +204,12 @@
           I'm intrigued by what intrigues others.
           Not as much about the thing itself, but their interest in it.
           As all humans I'm explained by paradoxes:
-          <ul>
-            <li>I love people, but they exhaust me.</li>
-            <li>I'm smart, but I'm also dumb.</li>
-            <li>I'm empathic and it makes me lack empathy.</li>
-          </ul>
         </p>
+        <ul>
+          <li>I love people, but they exhaust me.</li>
+          <li>I'm smart, but I'm also dumb.</li>
+          <li>I'm empathic and it makes me lack empathy.</li>
+        </ul>
       </div>
   </div>
     <button onclick="topFunction()" id='to_top'>Back to the top</button>
