--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		                    <a href="#prof_intro">Professional introduction</a>
 		                </li>
 		                <li>
-		                    <a href="#qual">Qualifications</a>
+		                    <a href="#e-courses">Qualifications</a>
 		                </li>
                         <li>
                           <a href="#past_prj">Past Projects</a>
@@ -42,7 +42,7 @@
         <h2>What defines me as a web developer?</h2>
         <p> Hello!</p>
         <br>
-        <p>My legal name is Carlos Soosaar, but I go by <span class="emp">Samantha Soosaar</span>. I’m <span class="emp">21</span> years old and a July baby.
+        <p>My name is <span class="emp">Samantha Soosaar</span>. I’m <span class="emp">21</span> years old and a July baby.
           I’m currently undergoing a <span class="emp">Junior Software Developer</span> vocational degree in Tartu Vocational College.
           I’ve chosen software development as I’ve always been of a technical mind
           and after a half a year of introspection I’ve realised a career in IT seems like it would be a great fit for me.
@@ -101,9 +101,12 @@
         <p>Robootika</p>
       </div>
     </div>
+  <div class="grid-container">
+    <h2>E-courses I've passed</h2>
+    <h2>Skills I've obtained</h2>
+  </div>
     <div class="grid-container">
       <div id="e-courses">
-        <h2>E-courses I've passed</h2>
         <h3>Codecademy</h3>
         <ul>
           <li>
@@ -151,8 +154,8 @@
         </ul>
       </div>
       <!--add internal images-->
-      <div id="qual">
-        <h2>Skills I've obtained</h2>
+      <!--<div id="qual">-->
+
         <div id="skill_1" class="skills">
           <h3><span class="emp">H</span>yper<span class="emp">T</span>ext <span class="emp">M</span>arkup <span class="emp">L</span>anguage</h3>
           <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/512px-HTML5_logo_and_wordmark.svg.png" alt="HTML logo">
@@ -174,7 +177,7 @@
           <img src="https://upload.wikimedia.org/wikipedia/labs/8/8e/Mysql_logo.png" alt="MySQL logo">
         </div>
       </div>
-    </div>
+   <!-- </div>-->
     <!--choose and add past projects-->
     <div id="past_prj">
       <h2>Some of my past work</h2>
