--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 	<meta http-equiv="X-UA-Compatible" content="IE-edge">
     <link rel="icon" type="image/x-icon" href="img/Logo_Sam_small.png">
 	<link rel="stylesheet" href="style.css" type="text/css">
-	<link rel="stylesheet" media="screen and (max-width:500px)" href="mobile.css" type="text/css">
+	<link rel="stylesheet" media="screen and (max-width:700px)" href="mobile.css" type="text/css">
 	<script src="https://kit.fontawesome.com/536e24cca5.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
 		    <nav id="navbar">
 		        <div class="container">
-                  <a href="#prof_intro"><img id='logo' src="img/logo_sam_small.png" alt="logo"></a>
+                  <a href="#prof_intro"><img id='logo' src="img/Logo_Sam_small.png" alt="logo"></a>
+                  <a href="#prof_intro"><img id='logo_large' src="img/Logo_Sam_large.png" alt="logo"></a>
 		            <ul id="navbar_links">
 		                <li>
 		                    <a href="#prof_intro">Professional introduction</a>
@@ -61,6 +62,7 @@
         </p>
       </div>
     </div>
+    <div class='horline'></div>
     <div class='grid-container'>
       <div id='education'>
         <h2>Where I've studied</h2>
@@ -105,6 +107,7 @@
         <p>Robootika</p>
       </div>
     </div>
+          <div class=horline></div>
     <div class="grid-container">
       <div id="e-courses">
         <h2>E-courses I've passed</h2>
@@ -178,8 +181,9 @@
           <img src="img/MySQL.png" alt="MySQL logo">
         </div>
       </div>
+      <div class=horline></div>
    <!-- </div>-->
-  <h2>Some of my past projects!</h2>
+  
     <!--choose and add past projects-->
     <div id="past_prj" class="grid-container">
 	    <div id='prj1'>
@@ -190,6 +194,7 @@
           <a href="https://carlosvs23.ikt.khk.ee/programmeerimis_alused/project_idle/">Link to the game on a cpanel server (warning: may be down)</a>
 	    </div>
 	    <div id='prj2'>
+	        <h2>Some of my past projects!</h2>
           <a href="https://github.com/PastelBun/archive/tree/main/veebiarendus/projekt">
 		    <h3>Hobby webpage</h3>
             <img src="img/hobby_page.png" alt="screenshot of a hobby webpage">
@@ -226,13 +231,12 @@
         </ul>
       </div>
   </div>
-  <br>
     <footer>
       <p>Samantha Soosaar &copy;2024, All rights are protected</p>
       <div id="icons">
       <a href="https://www.facebook.com/profile.php?id=100005744265418">
         <i class="fa-brands fa-facebook"></i>
-      </a>
+        </a>
       <a href="mailto:samanthasoosaar@gmail.com">
         <i class="fa-solid fa-inbox"></i>
       </a>
